--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,23 +2,23 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="hirsute"
+BASECODENAME="jammy"
 
 # base version
-BASEVERSION="21.04"
+BASEVERSION="22.04.1"
 
 # distribution codename
-CODENAME="Ubuntu Cinnamon Remix"
+CODENAME="VanillaOS"
 
 # distribution version
-VERSION="21.04"
+VERSION="22.04.1"
 
 # distribution channel
 CHANNEL="unstable"
 #CHANNEL="all"
 
 # distribution name
-NAME="ubuntucinnamonremix"
+NAME="vanillaos"
 
 # mirror to fetch packages from
 MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
