--- a/etc/config/bootloaders/isolinux/live.cfg.in
+++ b/etc/config/bootloaders/isolinux/live.cfg.in
@@ -1,18 +1,18 @@
 prompt 0
 
 MENU HIDDEN
-MENU AUTOBOOT Booting Ubuntu Cinnamon Remix live disk in # seconds
+MENU AUTOBOOT Booting Vanilla OS live disk in # seconds
 timeout 50
 
 label live-@FLAVOUR@
-	menu label ^Try or install Ubuntu Cinnamon Remix
+	menu label ^Try or install Vanilla OS
 	menu default
 	linux /casper/vmlinuz
 	initrd /casper/initrd.lz
 	append @APPEND_LIVE@
 
 label live-failsafe
-	menu label Start Ubuntu Cinnamon Remix (Safe Graphics)
+	menu label Start Vanilla OS (Safe Graphics)
 	set gfxpayload=keep
 	linux /casper/vmlinuz
 	initrd /casper/initrd.lz
