--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -8,7 +8,7 @@ BASECODENAME="jammy"
 BASEVERSION="22.04.1"
 
 # distribution codename
-CODENAME="VanillaOS"
+CODENAME="jammy"
 
 # distribution version
 VERSION="22.04.1"
@@ -18,13 +18,14 @@ CHANNEL="unstable"
 #CHANNEL="all"
 
 # distribution name
-NAME="vanillaos"
+NAME="VanillaOS"
 
 # mirror to fetch packages from
 MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
 
 # use HWE kernel and packages?
-HWE="no"
+HWE="yes"
+HWE_X11="no"
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
