use calamares instead

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -31,4 +31,4 @@ HWE_X11="no"
 OUTPUT_SUFFIX=""
 
 # folder suffix for the package lists to use
-PACKAGE_LISTS_SUFFIX="ubiquity"
+PACKAGE_LISTS_SUFFIX="calamares"
