--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -25,7 +25,7 @@ MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
 
 # use HWE kernel and packages?
 HWE="yes"
-HWE_X11="no"
+HWE_X11="yes"
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
