remove xorg-hwe
removed since 18.04

--- a/etc/auto/config
+++ b/etc/auto/config
@@ -10,10 +10,6 @@ else
     KERNEL_FLAVORS="generic"
 fi
 
-if [ "$HWE_X11" = "yes" ]; then
-    XORG_HWE="xserver-xorg-hwe-${BASEVERSION}"
-fi
-
 lb config noauto \
     --architectures "$ARCH" \
     --mode ubuntu \
@@ -63,4 +59,4 @@ sed -i "s/@DISTRO_NAME/$NAME/" config/includes.binary/.disk/info
 sed -i "s/@VERSION/$VERSION/" config/includes.binary/.disk/info
 sed -i "s/@DATE/$DATE/" config/includes.binary/.disk/info
 
-sed -i "s/@XORG_HWE/$XORG_HWE/" config/package-lists/desktop.list.chroot_install
+# sed -i "s/@XORG_HWE/$XORG_HWE/" config/package-lists/desktop.list.chroot_install
