switch to kinetic

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,16 +2,16 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="jammy"
+BASECODENAME="kinetic"
 
 # base version
-BASEVERSION="22.04.1"
+BASEVERSION="22.10"
 
 # distribution codename
-CODENAME="jammy"
+CODENAME="kinetic"
 
 # distribution version
-VERSION="22.04.1"
+VERSION="22.10"
 
 # distribution channel
 CHANNEL="unstable"
