revert kinetic update
that was a very unstable experience :/

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,16 +2,16 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="kinetic"
+BASECODENAME="jammy"
 
 # base version
-BASEVERSION="22.10"
+BASEVERSION="22.04.1"
 
 # distribution codename
-CODENAME="kinetic"
+CODENAME="jammy"
 
 # distribution version
-VERSION="22.10"
+VERSION="22.04.1"
 
 # distribution channel
 CHANNEL="unstable"
