--- a/.github/workflows/jammy.yml
+++ b/.github/workflows/jammy.yml
@@ -1,4 +1,4 @@
-name: VanillaOS Kinetic
+name: VanillaOS jammy
 
 on:
   workflow_dispatch:
@@ -28,5 +28,5 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: VanillaOS 22.10
+        name: VanillaOS 22.04.1
         path: /iso-builder/builds/
