add hook for os-info

--- a/etc/auto/config
+++ b/etc/auto/config
@@ -59,4 +59,8 @@ sed -i "s/@DISTRO_NAME/$NAME/" config/includes.binary/.disk/info
 sed -i "s/@VERSION/$VERSION/" config/includes.binary/.disk/info
 sed -i "s/@DATE/$DATE/" config/includes.binary/.disk/info
 
+sed -i "s/@DISTRO_NAME/$NAME/" config/hooks/live/004-set-os-info.chroot
+sed -i "s/@VERSION/$VERSION/" config/hooks/live/004-set-os-info.chroot
+sed -i "s/@CHANNEL/$CHANNEL/" config/hooks/live/004-set-os-info.chroot
+
 # sed -i "s/@XORG_HWE/$XORG_HWE/" config/package-lists/desktop.list.chroot_install
