--- a/etc/auto/config
+++ b/etc/auto/config
@@ -62,5 +62,7 @@ sed -i "s/@DATE/$DATE/" config/includes.binary/.disk/info
 sed -i "s/@DISTRO_NAME/$NAME/" config/hooks/live/004-set-os-info.chroot
 sed -i "s/@VERSION/$VERSION/" config/hooks/live/004-set-os-info.chroot
 sed -i "s/@CHANNEL/$CHANNEL/" config/hooks/live/004-set-os-info.chroot
+sed -i "s/@CODENAME/$CODENAME/" config/hooks/live/004-set-os-info.chroot
+sed -i "s/@BASECODENAME/$BASECODENAME/" config/hooks/live/004-set-os-info.chroot
 
 # sed -i "s/@XORG_HWE/$XORG_HWE/" config/package-lists/desktop.list.chroot_install
