--- a/.github/workflows/kinetic.yml
+++ b/.github/workflows/kinetic.yml
@@ -20,9 +20,9 @@ jobs:
       run: |
         apt update
         apt install git debootstrap -y
-        wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb -o ./live-build.deb
-        dpkg -i live-build.deb
-        rm -f live-build.deb
+        wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb
+        dpkg -i live-build_20220505_all.deb
+        rm -f live-build_20220505_all.deb
 
     - name: Build ISO
       run: |
