pkg: Replace logo plymouth with bgrt

--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -12,7 +12,7 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 menuentry "Try or Install Vanilla OS" {
  set gfxpayload=keep
- linux	/casper/vmlinuz boot=casper quiet splash ---
+ linux	/casper/vmlinuz boot=casper quiet splash bgrt_disable ---
  initrd	/casper/initrd.lz
 }
 menuentry "Try or Install Vanilla OS (Safe Graphics)" {
