--- a/etc/auto/config
+++ b/etc/auto/config
@@ -4,12 +4,6 @@ set -e
 
 . ./terraform.conf
 
-if [ "$HWE_KERNEL" = "yes" ]; then
-    KERNEL_FLAVORS="generic-hwe-${BASEVERSION}"
-else
-    KERNEL_FLAVORS="generic"
-fi
-
 lb config noauto \
     --architectures "$ARCH" \
     --mode ubuntu \
@@ -19,8 +13,8 @@ lb config noauto \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
     --linux-packages linux-image \
-    --linux-flavours "$KERNEL_FLAVORS" \
-    --bootappend-live "boot=casper maybe-ubiquity quiet splash" \
+    --linux-flavours "generic" \
+    --bootappend-live "boot=casper quiet splash" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "http://security.ubuntu.com/ubuntu/" \
@@ -42,7 +36,8 @@ lb config noauto \
     --security true \
     --updates true \
     --debootstrap-options "--exclude=pinephone-tweaks,mobile-tweaks-common,librem5-tweaks,pinetab-tweaks" \
-    --checksums md5 \
+    --checksums sha256 \
+    --swap-file-path /swapfile \
     "${@}"
 
 
@@ -63,5 +58,3 @@ sed -i "s/@VERSION/$VERSION/" config/hooks/live/004-set-os-info.chroot
 sed -i "s/@CHANNEL/$CHANNEL/" config/hooks/live/004-set-os-info.chroot
 sed -i "s/@CODENAME/$CODENAME/" config/hooks/live/004-set-os-info.chroot
 sed -i "s/@BASECODENAME/$BASECODENAME/" config/hooks/live/004-set-os-info.chroot
-
-# sed -i "s/@XORG_HWE/$XORG_HWE/" config/package-lists/desktop.list.chroot_install
