--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -10,12 +10,12 @@ set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 
 set timeout=5
-menuentry "Try or Install Vanilla OS" {
+menuentry "Try or Install RR OS" {
  set gfxpayload=keep
  linux	/casper/vmlinuz boot=casper quiet splash bgrt_disable ---
  initrd	/casper/initrd.lz
 }
-menuentry "Try or Install Vanilla OS (Safe Graphics)" {
+menuentry "Try or Install RR OS (Safe Graphics)" {
  set gfxpayload=keep
  linux	/casper/vmlinuz  boot=casper nomodeset quiet splash nomodeset ---
  initrd	/casper/initrd.lz
