--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,29 +2,26 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="kinetic"
+BASECODENAME="devel"
 
 # base version
-BASEVERSION="22.10"
+#BASEVERSION="22.10" doesn't even matter!
 
 # distribution codename
-CODENAME="kinetic"
+CODENAME="devel"
 
 # distribution version
-VERSION="22.10"
+VERSION="$(date -I)"
 
 # distribution channel
 CHANNEL="unstable"
 #CHANNEL="all"
 
 # distribution name
-NAME="VanillaOS"
+NAME="Rolling Rhino Remix"
 
 # mirror to fetch packages from
 MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
-
-# use HWE kernel and packages?
-HWE="yes"
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
