--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -5,7 +5,7 @@ ARCH="amd64"
 BASECODENAME="devel"
 
 # base version
-#BASEVERSION="22.10" doesn't even matter!
+BASEVERSION="devel"
 
 # distribution codename
 CODENAME="devel"
@@ -14,8 +14,8 @@ CODENAME="devel"
 VERSION="$(date -I)"
 
 # distribution channel
-CHANNEL="unstable"
-#CHANNEL="all"
+#CHANNEL="unstable"
+CHANNEL="all"
 
 # distribution name
 NAME="Rolling Rhino Remix"
