--- a/.github/workflows/kinetic.yml
+++ b/.github/workflows/kinetic.yml
@@ -5,9 +5,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
-      image: debian:latest
+      image: ubuntu:latest
       volumes:
         - /proc:/proc
       options: --privileged -it
@@ -16,7 +16,10 @@ jobs:
     - uses: actions/checkout@v3.1.0
 
     - name: Install needed packages
-      run: apt update && apt install debootstrap -y
+      run: |
+        wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb
+        dpkg -i live-build_*_all.deb
+        rm -f live-build_*_all.deb
 
     - name: Build ISO
       run: ./build.sh etc/terraform.conf
