--- a/.github/workflows/kinetic.yml
+++ b/.github/workflows/kinetic.yml
@@ -17,6 +17,7 @@ jobs:
 
     - name: Install needed packages
       run: |
+        apt update && apt install debootstrap -y
         wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb
         dpkg -i live-build_*_all.deb
         rm -f live-build_*_all.deb
