--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -18,7 +18,7 @@ VERSION="$(date -I)"
 CHANNEL="all"
 
 # distribution name
-NAME="Rolling Rhino Remix"
+NAME="Rolling Linux"
 
 # mirror to fetch packages from
 MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
