--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -1,4 +1,4 @@
-name: RRR OS ISO Generation
+name: RL OS ISO Generation
 
 on:
   workflow_dispatch
@@ -30,5 +30,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rolling Rhino Remix OS 2023
+        name: Rolling Rhino Remix OS
         path: builds/
