--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -12,13 +12,18 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 menuentry "Try or Install Rolling Linux OS" {
  set gfxpayload=keep
- linux	/casper/vmlinuz boot=casper quiet splash bgrt_disable ---
+ linux	/casper/vmlinuz boot=casper quiet splash ---
  initrd	/casper/initrd.lz
 }
 menuentry "Try or Install Rolling Linux OS (Safe Graphics)" {
  set gfxpayload=keep
- linux	/casper/vmlinuz  boot=casper nomodeset quiet splash nomodeset ---
+ linux	/casper/vmlinuz boot=casper nomodeset quiet splash ---
  initrd	/casper/initrd.lz
+}
+menuentry "OEM install (for manufacturers)" {
+	set gfxpayload=keep
+	linux	/casper/vmlinuz boot=casper oem-config/enable=true quiet splash --- 
+	initrd	/casper/initrd.lz
 }
 grub_platform
 if [ "$grub_platform" = "efi" ]; then
