--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -11,7 +11,7 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-VERSION="$(date -I)"
+VERSION="$(date -I | sed 's/-/./g')"
 
 # distribution channel
 #CHANNEL="unstable"
