--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -12,12 +12,12 @@ jobs:
 
     - name: Install needed packages
       run: |
-        rm -rf /usr/local/lib/android
-        rm -rf /usr/share/dotnet
-        rm -rf /opt/ghc
-        rm -rf "/usr/local/share/boost"
-        rm -rf "$AGENT_TOOLSDIRECTORY"
-        apt-get update && apt install debootstrap -y
+        apt-get update && apt install debootstrap sudo -y
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /opt/ghc
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb
         dpkg -i live-build_*_all.deb
         rm -f live-build_*_all.deb
