--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Install needed packages
       run: |
-        apt-get update && apt install debootstrap sudo -y
+        sudo apt-get update && apt install debootstrap -y
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /usr/share/dotnet
         sudo rm -rf /opt/ghc
@@ -26,7 +26,7 @@ jobs:
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build ISO
-      run: ./build.sh etc/terraform.conf
+      run: sudo ./build.sh etc/terraform.conf
 
     - uses: actions/upload-artifact@v3.1.0
       with:
