--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Install needed packages
       run: |
-        sudo apt-get update && apt install debootstrap -y
+        sudo apt-get update && sudo apt-get install debootstrap -y
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /usr/share/dotnet
         sudo rm -rf /opt/ghc
