--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -19,7 +19,7 @@ jobs:
         sudo rm -rf "/usr/local/share/boost"
         sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         wget -q http://http.us.debian.org/debian/pool/main/l/live-build/live-build_20220505_all.deb
-        dpkg -i live-build_*_all.deb
+        sudo dpkg -i live-build_*_all.deb
         rm -f live-build_*_all.deb
 
     - name: Make scripts executable
