--- a/etc/auto/config
+++ b/etc/auto/config
@@ -39,11 +39,10 @@ lb config noauto \
     --debootstrap-options "--exclude=pinephone-tweaks,mobile-tweaks-common,librem5-tweaks,pinetab-tweaks" \
     --checksums sha256 \
     --swap-file-path /swapfile \
-    --swap-file-size 256MB \
-    --interactive false \
-    --debconf-frontend noninteractive \
+#    --swap-file-size 256MB \
+#    --interactive false \
+#    --debconf-frontend noninteractive \
     --compression xz \
-    --debug \
     "${@}"
 
 
