--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -31,4 +31,4 @@ jobs:
     - uses: actions/upload-artifact@v3.1.0
       with:
         name: Rolling Linux OS
-        path: builds/
+        path: builds/amd64/
