--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -17,13 +17,13 @@ menuentry "Try or Install Rolling Linux OS" {
 }
 menuentry "Try or Install Rolling Linux OS (Safe Graphics)" {
  set gfxpayload=keep
- linux	/casper/vmlinuz boot=casper nomodeset quiet splash ---
- initrd	/casper/initrd.lz
+ linux	/boot/vmlinuz boot=casper nomodeset quiet splash ---
+ initrd	/boot/initrd.img
 }
 menuentry "OEM install (for manufacturers)" {
 	set gfxpayload=keep
-	linux	/casper/vmlinuz boot=casper oem-config/enable=true quiet splash --- 
-	initrd	/casper/initrd.lz
+	linux	/boot/vmlinuz boot=casper oem-config/enable=true quiet splash --- 
+	initrd	/boot/initrd.img
 }
 grub_platform
 if [ "$grub_platform" = "efi" ]; then
