--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -12,8 +12,8 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 menuentry "Try or Install Rolling Linux OS" {
  set gfxpayload=keep
- linux	/casper/vmlinuz boot=casper quiet splash ---
- initrd	/casper/initrd.lz
+ linux	/boot/vmlinuz boot=casper quiet splash ---
+ initrd	/boot/initrd.img
 }
 menuentry "Try or Install Rolling Linux OS (Safe Graphics)" {
  set gfxpayload=keep
