--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -24,6 +24,7 @@ jobs:
         rm -f live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
+        sudo patch /usr/lib/live/build/chroot_archives -i 0003-Update-apt-sources.patch
         sudo mv functions /usr/share/debootstrap/functions
 
     - name: Make scripts executable
