fix(workflow): change OS name

--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -41,5 +41,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rolling Rhino Linux OS
+        name: Rhino Linux OS
         path: builds/amd64/
