fix: `Rolling Linux` -> `Rhino Linux`

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -18,7 +18,7 @@ VERSION="$(date -I | sed 's/-/./g')"
 CHANNEL="all"
 
 # distribution name
-NAME="Rolling Linux"
+NAME="Rhino Linux"
 
 # mirror to fetch packages from
 MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
