--- a/etc/config/bootloaders/isolinux/live.cfg.in
+++ b/etc/config/bootloaders/isolinux/live.cfg.in
@@ -7,15 +7,15 @@ timeout 50
 label live-@FLAVOUR@
 	menu label ^Try or install Rolling Linux OS
 	menu default
-	linux /boot/vmlinuz
-	initrd /boot/initrd.img
+	linux /casper/vmlinuz
+	initrd /casper/initrd.lz
 	append @APPEND_LIVE@
 
 label live-failsafe
 	menu label Start Rolling Linux OS (Safe Graphics)
 	set gfxpayload=keep
-	linux /boot/vmlinuz
-	initrd /boot/initrd.img
+	linux /casper/vmlinuz
+	initrd /casper/initrd.lz
 	append @APPEND_LIVE@ nomodeset
 
 label hd
