--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -10,12 +10,12 @@ set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 
 set timeout=5
-menuentry "Try or Install Rolling Linux OS" {
+menuentry "Try or Install Rhino Linux OS" {
  set gfxpayload=keep
  linux	/casper/vmlinuz boot=casper quiet splash ---
  initrd	/casper/initrd.lz
 }
-menuentry "Try or Install Rolling Linux OS (Safe Graphics)" {
+menuentry "Try or Install Rhino Linux OS (Safe Graphics)" {
  set gfxpayload=keep
  linux	/casper/vmlinuz boot=casper nomodeset quiet splash ---
  initrd	/casper/initrd.lz
