--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build_amd64:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2204
 
     steps:
     - uses: actions/checkout@v3.1.0
