--- a/etc/auto/config
+++ b/etc/auto/config
@@ -44,6 +44,9 @@ lb config noauto \
     --debconf-frontend noninteractive \
     --compression xz \
     --checksums md5 \
+    --binary-filesystem fat32 \
+    --chroot-filesystem squashfs \
+    --chroot-squashfs-compression-level 9 \
     --bootloaders "syslinux grub-efi" \
     "${@}"
 
