--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -40,7 +40,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (AMD64/x86_64)
+        name: Rhino Linux OS (AMD64)
         path: builds/amd64/
         
   build_arm64:
