--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -33,6 +33,13 @@ SECURITY_URL="http://security.ubuntu.com/ubuntu/";
 else SECURITY_URL="$MIRROR_URL"; 
 fi
 
+# bootloaders tweak
+
+if [ $ARCH = amd64 ]; then 
+BOOTLOADERS="syslinux grub-efi"; 
+else BOOTLOADERS="grub-efi"; 
+fi
+
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
 
