--- a/etc/auto/config
+++ b/etc/auto/config
@@ -44,7 +44,7 @@ lb config noauto \
     --debconf-frontend noninteractive \
     --compression xz \
     --checksums md5 \
-    --bootloaders grub-efi \
+    --bootloaders "$BOOTLOADERS" \
     "${@}"
 
 
