fix: make `arm64` always the `if`

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -28,16 +28,16 @@ MIRROR_URL="http://ports.ubuntu.com/ubuntu-ports/";
 else MIRROR_URL="http://archive.ubuntu.com/ubuntu/"; 
 fi
 
-if [ $ARCH = amd64 ]; then 
-SECURITY_URL="http://security.ubuntu.com/ubuntu/"; 
-else SECURITY_URL="$MIRROR_URL"; 
+if [ $ARCH = arm64 ]; then 
+SECURITY_URL="$MIRROR_URL"; 
+else SECURITY_URL="http://security.ubuntu.com/ubuntu/"; 
 fi
 
 # bootloaders tweak
 
-if [ $ARCH = amd64 ]; then 
-BOOTLOADERS="syslinux grub-efi"; 
-else BOOTLOADERS="grub-efi"; 
+if [ $ARCH = arm64 ]; then 
+BOOTLOADERS="grub-efi"; 
+else BOOTLOADERS="syslinux grub-efi"; 
 fi
 
 # suffix for generated .iso files
