--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -5,10 +5,7 @@ on:
 
 jobs:
   build_amd64:
-    strategy:
-      matrix:
-        runs-on: [buildjet-4vcpu-ubuntu-2204, buildjet-8vcpu-ubuntu-2204, buildjet-16vcpu-ubuntu-2204, buildjet-32vcpu-ubuntu-2204]
-    runs-on: ${{matrix.runs-on}}
+    runs-on: buildjet-16vcpu-ubuntu-2204
     steps:
     - uses: actions/checkout@v3.1.0
 
@@ -45,10 +42,7 @@ jobs:
         path: builds/amd64/
         
   build_arm64:
-    strategy:
-      matrix:
-        runs-on: [buildjet-4vcpu-ubuntu-2204-arm, buildjet-8vcpu-ubuntu-2204-arm, buildjet-16vcpu-ubuntu-2204-arm, buildjet-32vcpu-ubuntu-2204-arm]
-    runs-on: ${{matrix.runs-on}}
+    runs-on: buildjet-16vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.1.0
 
