keep it from doing cp on local builds

--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -21,13 +21,7 @@ jobs:
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
-        
-        #sudo mv 0003-Update-apt-sources.patch /
-        #pushd /
-        #sudo patch -i 0003-Update-apt-sources.patch -p1
-        #sudo rm 0003-Update-apt-sources.patch
-        #popd
-        
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
         sudo mv functions /usr/share/debootstrap/functions
 
     - name: Make scripts executable
@@ -58,14 +52,9 @@ jobs:
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
-        
-        #sudo mv 0003-Update-apt-sources.patch /
-        #pushd /
-        #sudo patch -i 0003-Update-apt-sources.patch -p1
-        #sudo rm 0003-Update-apt-sources.patch
-        #popd
-        
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
         sudo mv functions /usr/share/debootstrap/functions
+        
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
