--- a/etc/auto/config
+++ b/etc/auto/config
@@ -24,7 +24,7 @@ lb config noauto \
     --parent-mirror-binary-security "$SECURITY_URL" \
     --mirror-binary "$MIRROR_URL" \
     --parent-mirror-binary "$MIRROR_URL" \
-    --keyring-packages ubuntu-keyring \
+    --keyring-packages "ubuntu-keyring debian-keyring debian-archive-keyring debian-ports-archive-keyring" \
     --apt-options "--option Acquire::Retries=2 --option Acquire::http::Timeout=45 --yes" \
     --cache-packages false \
     --cache-stages false \
