add qemu so amd64 can run arm64

--- a/etc/auto/config
+++ b/etc/auto/config
@@ -6,6 +6,7 @@ set -e
 
 lb config noauto \
     --architectures "$ARCH" \
+    --bootstrap-qemu-arch "$ARCH" \
     --mode debian \
     --initramfs live-boot \
     --initsystem systemd \
