--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -11,18 +11,13 @@ jobs:
 
     - name: Install needed packages
       run: |
-        sudo apt-get update && sudo apt-get install debootstrap -y
-        sudo rm -rf /usr/local/lib/android
-        sudo rm -rf /usr/share/dotnet
-        sudo rm -rf /opt/ghc
-        sudo rm -rf "/usr/local/share/boost"
-        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
-        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
         sudo mv functions /usr/share/debootstrap/functions
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
 
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
@@ -42,18 +37,13 @@ jobs:
 
     - name: Install needed packages
       run: |
-        sudo apt-get update && sudo apt-get install debootstrap -y
-        sudo rm -rf /usr/local/lib/android
-        sudo rm -rf /usr/share/dotnet
-        sudo rm -rf /opt/ghc
-        sudo rm -rf "/usr/local/share/boost"
-        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
-        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
         sudo mv functions /usr/share/debootstrap/functions
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
         
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
