--- a/etc/auto/config
+++ b/etc/auto/config
@@ -7,15 +7,13 @@ set -e
 lb config noauto \
     --architectures "$ARCH" \
     --mode debian \
-    --initramfs live-boot \
+    --initramfs none \
     --initsystem systemd \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages linux-image \
     --linux-flavours "generic" \
-    --bootappend-live "boot=casper quiet splash" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "$SECURITY_URL" \
@@ -30,6 +28,7 @@ lb config noauto \
     --cache-stages false \
     --uefi-secure-boot enable \
     --binary-image iso-hybrid \
+    --binary-filesystem ext4 \
     --iso-application "$NAME" \
     --iso-volume "$NAME" \
     --firmware-binary false \
@@ -37,7 +36,7 @@ lb config noauto \
     --zsync false \
     --security true \
     --updates true \
-    --debootstrap-options "--exclude=pinephone-tweaks,mobile-tweaks-common,librem5-tweaks,pinetab-tweaks" \
+    --debootstrap-options "--include=mobile-tweaks-common" \
     --swap-file-path /swapfile \
     --swap-file-size 512 \
     --interactive false \
