--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -36,7 +36,7 @@ fi
 # bootloaders tweak
 
 if [ $ARCH = arm64 ]; then 
-BOOTLOADERS="syslinux"; 
+BOOTLOADERS="grub-efi"; 
 else BOOTLOADERS="syslinux grub-efi"; 
 fi
 
