--- a/etc/auto/config
+++ b/etc/auto/config
@@ -28,7 +28,7 @@ lb config noauto \
     --cache-stages false \
     --uefi-secure-boot enable \
     --binary-image hdd \
-    --binary-filesystem fat32 \
+    --binary-filesystem ext4 \
     --hdd-label "RHINO_LINUX" \
     --firmware-binary false \
     --firmware-chroot false \
