--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -27,5 +27,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (ARM64)
+        name: Rhino Linux OS (PinePhonePro)
         path: builds/arm64/
