--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -11,6 +11,7 @@ jobs:
 
     - name: Install needed packages
       run: |
+        sudo rm -rf /var/lib/apt/lists/*
         sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
@@ -37,6 +38,7 @@ jobs:
 
     - name: Install needed packages
       run: |
+        sudo rm -rf /var/lib/apt/lists/*
         sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
