--- a/etc/auto/config
+++ b/etc/auto/config
@@ -13,7 +13,6 @@ lb config noauto \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-flavours "generic" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "$SECURITY_URL" \
@@ -30,6 +29,7 @@ lb config noauto \
     --binary-image hdd \
     --binary-filesystem ext4 \
     --chroot-filesystem ext4 \
+    --build-with-chroot true \
     --hdd-label "RHINO_LINUX" \
     --firmware-binary false \
     --firmware-chroot false \
