--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -14,7 +14,7 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
         sudo rm -rf /var/lib/apt/lists/*
         sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
-        sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
+        sudo apt-get update && sudo apt-get install --reinstall debootstrap mtools dosfstools -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
